Starting xml suites for basic testing